Fix: Xóa action khỏi form để dùng AJAX

--- a/app/templates/customer/register.html
+++ b/app/templates/customer/register.html
@@ -38,7 +38,7 @@
                     {% endif %}
                 {% endwith %}
                 
-                <form id="registerForm" method="POST" action="/auth/register">
+                <form id="registerForm" >
                     <div class="form-group">
                         <label for="hoten">
                             <i class="fas fa-user"></i> Họ và tên <span class="required">*</span>
