Update email domain and verify OTP page

--- a/app/templates/customer/verify_otp.html
+++ b/app/templates/customer/verify_otp.html
@@ -10,7 +10,7 @@
 <body>
     <div class="auth-container">
         <div class="auth-left">
-            <img src="{{ url_for('static', filename='images/spa-bg.jpg') }}" alt="Sà Spa">
+            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Sà Spa">
             <div class="auth-overlay">
                 <h1>Xác thực tài khoản</h1>
                 <p>Vui lòng nhập mã OTP được gửi đến email của bạn</p>
