--- a/app/templates/customer/verify_otp.html
+++ b/app/templates/customer/verify_otp.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xác thực OTP - Sà Spa</title>
+    <title>Xác thực OTP - Bin Spa</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/customers/auth.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="auth-container">
         <div class="auth-left">
-            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Sà Spa">
+            <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Bin Spa">
             <div class="auth-overlay">
                 <h1>Xác thực tài khoản</h1>
                 <p>Vui lòng nhập mã OTP được gửi đến email của bạn</p>
@@ -21,8 +21,8 @@
             <div class="auth-form-container">
                 <div class="auth-logo">
                     <a href="/">
-                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Sà Spa">
-                        <span>Sà spa</span>
+                        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bin Spa">
+                        <span>Bin spa</span>
                     </a>
                 </div>
                 
