--- a/app/templates/customer/appointment_create.html
+++ b/app/templates/customer/appointment_create.html
@@ -99,6 +99,7 @@
                                 </label>
                                 <select id="appointmentTime" name="appointmentTime" required onchange="loadAvailableStaff()">
                                     <option value="">-- Chọn giờ --</option>
+                                    <option value="07:30">07:30</option>
                                     <option value="07:30">08:00</option>
                                     <option value="08:00">08:00</option>
                                     <option value="08:30">08:30</option>
